--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/css/style.css
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/css/style.css
@@ -7498,13 +7498,14 @@ fieldset[disabled] .form-control {
       overflow: hidden;
       margin-top: 5px;
       font-size: 13px; }
-  .sidebar .user-info {
-    padding: 13px 15px 12px 15px;
-    white-space: nowrap;
-    position: relative;
-    border-bottom: 1px solid #e9e9e9;
-    background: url("../images/user-img-background.jpg") no-repeat no-repeat;
-    height: 135px; }
+    .sidebar .user-info {
+        padding: 13px 15px 12px 15px;
+        white-space: nowrap;
+        position: relative;
+        border-bottom: 1px solid #e9e9e9;
+        background: url("../images/lanting_code.png") no-repeat no-repeat;
+        height: 135px;
+    }
     .sidebar .user-info .image {
       margin-right: 12px;
       display: inline-block; }
