--- a/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <meta name="description" content="">
+    <meta name="description" content=""> 
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="~/favicon.ico">
@@ -112,6 +112,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
                     <li><a href="@Url.Action("Logout", "Account", new { area= string.Empty })" title="@L("Logout")"><i class="material-icons">input</i></a></li>
                 </ul>
             </div>
