--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
@@ -5,19 +5,79 @@
 @{
     Layout = null;
 }
-@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel(L("EditProductInfo")))
+
+<script src="~/view-resources/Views/Product/tiny/tinymce.min.js"></script>
+<script>
+    tinymce.init({
+        selector: "h1.editable#elm2",       //elm2为ID                 可将selector值理解为css中class、ID等，以此使用tinymce中样式（比如编辑框内文本显示样式、工具栏样式）--个人理解，不保证正确
+        inline: true,                       //为true时，编辑工具栏隐藏
+        toolbar: "undo redo",
+        menubar: false
+    });
+    tinymce.init({
+        selector: 'textarea#elm1',          //<textarea>中为编辑区域
+        theme: "modern",                  //主题
+        language: "zh_cn",                //语言 ，可自行下载中文
+
+        height: 300,
+        plugins: [                             //插件，可自行根据现实内容删除
+            "advlist autolink lists charmap print preview hr anchor pagebreak spellchecker",
+            "searchreplace wordcount visualblocks visualchars fullscreen insertdatetime  nonbreaking image imagetools",
+            "save table contextmenu directionality emoticons paste textcolor"
+        ],
+
+        //content_css: "css/content.css",      //引用的外部CSS样式，可删除
+        toolbar: "insertfile undo redo | styleselect fontselect fontsizeselect| bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | l      | print preview fullpage | forecolor backcolor | image",                          //工具栏，可根据需求删除
+        style_formats: [                        //初始时提供的默认格式
+            { title: 'Bold text', inline: 'b' },
+            { title: 'Red text', inline: 'span', styles: { color: '#ff0000' } },
+            { title: 'Red header', block: 'h1', styles: { color: '#ff0000' } },
+            { title: 'Example 1', inline: 'span', classes: 'example1' },
+            { title: 'Example 2', inline: 'span', classes: 'example2' },
+            { title: 'Table styles' },
+            { title: 'Table row 1', selector: 'tr', classes: 'tablerow1' }
+        ],
+        language: 'zh_CN',
+        images_upload_handler: function (blobInfo, success, failure) {
+            var xhr, formData;
+            xhr = new XMLHttpRequest();
+            xhr.withCredentials = false;
+            xhr.open('POST', _this.myPackage.template_api + '/api/services/app/Template/UploadPhoto', true);
+            xhr.setRequestHeader("Authorization", 'Bearer ' + _this.oidc_msg.access_token);
+            xhr.onload = function () {
+                var json;
+                if (xhr.status != 200) {
+                    if (xhr.status == 401) {
+                        failure('HTTP Error: 401,token 授权过期');
+                    } else {
+                        failure('HTTP Error: ' + xhr.status);
+                    }
+                    return;
+                }
+                console.log(xhr.responseText);
+                json = JSON.parse(xhr.responseText);
+                if (!json || typeof json.result.url != 'string') {
+                    failure('Invalid JSON: ' + xhr.responseText);
+                    return;
+                }
+
+                success(json.result.url);
+            };
+            formData = new FormData();
+            formData.append('file', blobInfo.blob(), blobInfo.filename());
+            xhr.send(formData);
+        }
+    });
+</script>
+
+@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel("修改产品图文"))
 <div class="modal-body">
     <form name="ProductInfoEditForm" role="form" novalidate class="form-validation">
         <input type="hidden" name="Id" value="@Model.Id" />
+
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="UserId" value="@Model.UserId" required maxlength="11">
-                <label for="UserId" class="form-label">@L("UserId")</label>
-            </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="Code" value="@Model.Code">
+                <input class="form-control" type="text" name="Code" value="@Model.Code" readonly="readonly">
                 <label for="Code" class="form-label">@L("Code")</label>
             </div>
         </div>
@@ -28,30 +88,13 @@
             </div>
         </div>
         <div class="form-group form-float">
-            <div class="">
-                <input id="IsEnabled" type="checkbox" name="IsEnabled" value="true" @(Model.IsEnabled ? "checked" : "") class="form-control" />
-                <label for="IsEnabled" class="form-label">@L("IsEnabled")</label>
-            </div>
-        </div>
-        <div class="form-group form-float">
             <div class="form-line">
                 <input class="form-control" type="text" name="Description" value="@Model.Description">
                 <label for="Description" class="form-label">@L("Description")</label>
             </div>
         </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="Created" value="@Model.Created" required maxlength="6">
-                <label for="Created" class="form-label">@L("Created")</label>
-            </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="Modified" value="@Model.Modified" maxlength="6">
-                <label for="Modified" class="form-label">@L("Modified")</label>
-            </div>
-        </div>
+
     </form>
 </div>
 @Html.Partial("~/Views/Shared/Modals/_ModalFooterWithSaveAndCancel.cshtml")
-<script src="~/view-resources/Views/ProductInfo/_EditProductInfoModal.js" asp-append-version="true"></script>
+<script src="~/view-resources/Views/Product/_EditProductInfoModal.js" asp-append-version="true"></script>
