--- a/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -32,32 +32,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <meta name="description" content=""> 
+    <meta name="description" content="">
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="~/favicon.ico">
 
     <title>IDCode</title>
 
-    <environment names="Development">
-        <link href="~/fonts/roboto/roboto.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/fonts/material-icons/materialicons.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/bootstrap-select/dist/css/bootstrap-select.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/toastr/toastr.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/famfamfam-flags/dist/sprite/famfamfam-flags.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/Waves/dist/waves.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/lib/animate.css/animate.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/materialize.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/style.css" rel="stylesheet" asp-append-version="true">
-        <link href="~/css/themes/all-themes.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/view-resources/Views/Shared/_Layout.css" rel="stylesheet" asp-append-version="true" />
-    </environment>
 
-    <environment names="Staging,Production">
-        <link href="~/view-resources/Views/_Bundles/shared-layout.min.css" rel="stylesheet" asp-append-version="true" />
-    </environment>
+    <link href="~/fonts/roboto/roboto.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/fonts/material-icons/materialicons.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/bootstrap-select/dist/css/bootstrap-select.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/toastr/toastr.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/famfamfam-flags/dist/sprite/famfamfam-flags.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/Waves/dist/waves.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/lib/animate.css/animate.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/materialize.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/style.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/themes/all-themes.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/view-resources/Views/Shared/_Layout.css" rel="stylesheet" asp-append-version="true" />
+
+    @*<environment names="Staging,Production">
+            <link href="~/view-resources/Views/_Bundles/shared-layout.min.css" rel="stylesheet" asp-append-version="true" />
+        </environment>*@
 
     <!-- View specific styles -->
     @RenderSection("styles", required: false)
