--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -6,13 +6,7 @@
 @{
     ViewBag.CurrentPageName = PageNames.Products; //The menu item will be active for this page.
 }
-@section scripts
-    {
-
-    <script src="~/view-resources/Views/Product/Index.js" asp-append-version="true"></script>
-
-}
-
+<script src="~/view-resources/Views/Product/Index.js"></script>
 <script src="~/view-resources/Views/Product/tiny/tinymce.min.js"></script>
 <script>
     tinymce.init({
@@ -74,6 +68,7 @@
             });
         }
     });
+
 </script>
 
 <div class="row clearfix">
@@ -113,7 +108,7 @@
 
                                 <td>@item.Code</td>
                                 <td>@item.FullName</td>
-                                <td>@item.IsEnabled</td>
+                                <td><i class="material-icons" style="color:@(item.IsEnabled ? "green":"red");">@(item.IsEnabled ? "check_box" : "indeterminate_check_box")</i></td>
                                 <td>@item.Description</td>
                                 <td class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
