tiny mce template

--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
@@ -8,67 +8,6 @@
 
 @Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel("修改产品图文"))
 
-<script>
-    tinymce.init({
-        selector: "h1.editable#elm2",       //elm2为ID                 可将selector值理解为css中class、ID等，以此使用tinymce中样式（比如编辑框内文本显示样式、工具栏样式）--个人理解，不保证正确
-        inline: true,                       //为true时，编辑工具栏隐藏
-        toolbar: "undo redo",
-        menubar: false
-    });
-    tinymce.init({
-        selector: '#htmlContentEdit',          //<textarea>中为编辑区域
-        theme: "modern",                  //主题
-        language: "zh_cn",                //语言 ，可自行下载中文
-
-        height: 300,
-        plugins: [                             //插件，可自行根据现实内容删除
-            "advlist autolink lists charmap print preview hr anchor pagebreak spellchecker",
-            "searchreplace wordcount visualblocks visualchars fullscreen insertdatetime  nonbreaking image imagetools",
-            "save table contextmenu directionality emoticons paste textcolor"
-        ],
-
-        //content_css: "css/content.css",      //引用的外部CSS样式，可删除
-        toolbar: "insertfile undo redo | styleselect fontselect fontsizeselect| bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | l      | print preview fullpage | forecolor backcolor | image",                          //工具栏，可根据需求删除
-        style_formats: [                        //初始时提供的默认格式
-            { title: 'Bold text', inline: 'b' },
-            { title: 'Red text', inline: 'span', styles: { color: '#ff0000' } },
-            { title: 'Red header', block: 'h1', styles: { color: '#ff0000' } },
-            { title: 'Example 1', inline: 'span', classes: 'example1' },
-            { title: 'Example 2', inline: 'span', classes: 'example2' },
-            { title: 'Table styles' },
-            { title: 'Table row 1', selector: 'tr', classes: 'tablerow1' }
-        ],
-        language: 'zh_CN',
-        images_upload_handler: function (blobInfo, success, failure) {
-
-            var formData = new FormData();
-            // formData.ppend(name, element);
-            formData.append('file', blobInfo.blob(), blobInfo.filename());
-            $.ajax({
-                url: abp.appPath + 'Product/FileUpload',
-                method: 'POST',
-                data: formData,
-                contentType: false, // 注意这里应设为false
-                processData: false,
-                cache: false,
-                success: function (data) {
-                    if (data.result.statusCode == 200) {
-                        success(data.result.data.url);
-                    }
-                },
-                error: function (jqXHR) {
-                    console.log(JSON.stringify(jqXHR));
-                }
-            }).done(function (data) {
-                console.log('done');
-            }).fail(function (data) {
-                console.log('fail');
-            }).always(function (data) {
-                console.log('always');
-            });
-        }
-    });
-</script>
 <div class="modal-body">
     <form name="ProductInfoEditForm" role="form" novalidate class="form-validation">
         <input type="hidden" name="Id" value="@Model.Id" />
@@ -102,7 +41,8 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default waves-effect">@L("Cancel")</button>
-    <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
+    <button type="button" class="btn btn-default close-button waves-effect">@L("Cancel")</button>
+    <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
 </div>
+
 <script src="~/view-resources/Views/Product/_EditProductInfoModal.js" asp-append-version="true"></script>
