--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/_EditProductInfoModal.cshtml
@@ -11,17 +11,22 @@
 <div class="modal-body">
     <form name="ProductInfoEditForm" role="form" novalidate class="form-validation">
         <input type="hidden" name="Id" value="@Model.Id" />
-
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="Code" value="@Model.Code" readonly="readonly">
-                <label for="Code" class="form-label">产品代码</label>
+        <div class="row clearfix">
+            <div class="col-sm-6">
+                <div class="form-group form-float">
+                    <div class="form-line">
+                        <input class="form-control" type="text" name="Code" value="@Model.Code" readonly="readonly">
+                        <label for="Code" class="form-label">产品代码</label>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="FullName" value="@Model.FullName">
-                <label for="FullName" class="form-label">产品名称</label>
+            <div class="col-sm-6">
+                <div class="form-group form-float">
+                    <div class="form-line">
+                        <input class="form-control" type="text" name="FullName" value="@Model.FullName">
+                        <label for="FullName" class="form-label">产品名称</label>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="form-group form-float">
@@ -32,10 +37,10 @@
         </div>
 
         <div class="form-group form-float">
-            <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-let:15%;margin-right:15%;padding:0;margin:2px 0;">
+            <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
             </div>
             <textarea id="htmlContentEdit" name="HtmlContent">@Model.HtmlContent</textarea>
-            <p>Tips information is here</p>
+
         </div>
 
     </form>
